--- a/sass/_sec-col.scss
+++ b/sass/_sec-col.scss
@@ -13,6 +13,16 @@
     padding-top: 50px;
     padding-left: 40px;
   }
+  .two-col__list {
+    list-style-color
+  }
+  .two-col__list > * {
+    color: #ffffff;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+    opacity: 0.5;
+  }
   .two-col__title {
     margin-bottom: 8px;
     font-weight: bold;
@@ -30,7 +40,7 @@
     font-weight: normal;
     font-size: 14px;
     line-height: 24px;
-    color: #ffffff;
     opacity: 0.5;
+    color: white;
   }
 }
