--- a/sass/_sec-col.scss
+++ b/sass/_sec-col.scss
@@ -14,7 +14,7 @@
     padding-left: 40px;
   }
   .two-col__list {
-    list-style-color
+    // list-style-color
   }
   .two-col__list > * {
     color: #ffffff;
