--- a/sass/_common.scss
+++ b/sass/_common.scss
@@ -14,7 +14,7 @@ a {
 img {
   display: block;
   &:not(.examples-section-item img) {
-    max-width: 100%;
+    width: 100%;
     height: auto;
   }
 }
@@ -32,6 +32,9 @@ ul {
   list-style: none;
   padding: 0;
   margin: 0;
+}
+.work-list{
+  list-style:disc;
 }
 .is-hidden {
   opacity: 0;
