--- a/css/main.css
+++ b/css/main.css
@@ -173,7 +173,7 @@ ul {
   padding-top: 50px;
   padding-left: 40px;
   padding-bottom: 35px;
-  max-width: 300px;
+  width: 300px;
 }
 
 .two-col .two-col__list > * {
