--- a/sass/_sec-col.scss
+++ b/sass/_sec-col.scss
@@ -14,7 +14,7 @@
     padding-top: 50px;
     padding-left: 40px;
     padding-bottom: 35px;
-    max-width: 300px;
+    width: 300px;
   }
   .two-col__list {
     // list-style-color
