--- a/sass/_sec-col.scss
+++ b/sass/_sec-col.scss
@@ -12,9 +12,8 @@
     margin-bottom: 44px;
   }
   &__container {
-    padding-top: 50px;
-    padding-left: 40px;
-    padding-bottom: 35px;
+    
+    padding: 50px 40px 35px 40px;
     
   .two-col__list {
     // list-style-color
