--- a/sass/_sec-col.scss
+++ b/sass/_sec-col.scss
@@ -1,6 +1,5 @@
-
 .two-col {
-  background-color: #1e2939;
+  background-color: #a5a5a5;
   width: 350px;
   &__img {
     height: 370px;
@@ -12,40 +11,39 @@
     margin-bottom: 44px;
   }
   &__container {
-    
     padding: 50px 40px 35px 40px;
-    
-  .two-col__list {
-    // list-style-color
-  }
-  .two-col__list > * {
-    color: #ffffff;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 24px;
-    opacity: 0.5;
-  }
-  .two-col__title {
-    margin-bottom: 8px;
-    font-weight: bold;
-    font-size: 22px;
-    line-height: 27px;
-    color: #ffffff;
-  }
 
-  
-  .two-col__item {
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 24px;
-    color: #ffffff;
+    .two-col__list {
+      // list-style-color
+    }
+    .two-col__list > * {
+      color: #000;
+      font-weight: normal;
+      font-size: 14px;
+      line-height: 24px;
+      // opacity: 0.5;
+    }
+    .two-col__title {
+      margin-bottom: 8px;
+      font-weight: bold;
+      font-size: 22px;
+      line-height: 27px;
+      color: #ffffff;
+    }
+
+    .two-col__item {
+      font-weight: normal;
+      font-size: 14px;
+      line-height: 24px;
+      color: #ffffff;
+    }
+    .two-col__link {
+      font-weight: normal;
+      font-size: 15px;
+      line-height: 24px;
+      text-decoration: underline;
+      // opacity: 0.5;
+      color: white;
+    }
   }
-  .two-col__link {
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 24px;
-    opacity: 0.5;
-    color: white;
-  }
-}
 }
