--- a/css/main.css
+++ b/css/main.css
@@ -70,7 +70,7 @@ ul {
 
 .main .one-col .one-col__projects .link {
   margin-left: 5px;
-  font-size: 18px;
+  font-size: 15px;
   line-height: 24px;
   color: #000;
   text-decoration: underline;
@@ -201,7 +201,7 @@ ul {
   font-size: 15px;
   line-height: 24px;
   text-decoration: underline;
-  color: white;
+  color: #000;
 }
 
 body {
