--- a/sass/_sec-col.scss
+++ b/sass/_sec-col.scss
@@ -43,7 +43,7 @@
       line-height: 24px;
       text-decoration: underline;
       // opacity: 0.5;
-      color: white;
+      color: #000;
     }
   }
 }
